Working on a bit of responsiveness

--- a/index.html
+++ b/index.html
@@ -861,9 +861,9 @@
           </div>
         </div>
       </section>
-      <!------------------------------------------------Contact---------------------------------------------------------------------------------------->
-      <section class="Contacts" id="ContactSection">
-        <h3 class="subTitle bounce">Contact Me</h3>
+      <!------------------------------------------------My Socials---------------------------------------------------------------------------------------->
+      <section class="Socials" id="SocialsSection">
+        <h3 class="subTitle bounce">My Socials</h3>
         <ul class="socialIconsCon">
           <li class="social-Icon">
             <a href="">
