Added Passion Icon

--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/project2.png" alt="Project 2 Preview" />
+            <img src="Images/Previews/Passion.webp" alt="Project 2 Preview" />
           </div>
         </div>
 
@@ -851,7 +851,7 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="" alt="Project 3 Preview" />
+            <img src="Images/Previews/CreateIT.webp" alt="Project 3 Preview" />
           </div>
         </div>
 
