CSS styling for projects section update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="card__propic" />
             <h2 class="card__title">Site Navigation</h2>
             <p>
-              Hello! I'm Passion, Tino's personalized AI chatbot. Welcome to our
+              Hey! I'm Passion, Tino's personalized AI chatbot. Welcome to our
               portfolio website. Here are some helpful tips to navigate the
               site. If you’re ready to start exploring, feel free to
               <u onclick="hidePopUp()" class="textBtn">skip this guide.</u>
@@ -788,8 +788,13 @@
               <span class="tag">Database</span>
             </div>
             <div class="project-buttons">
-              <a href="#" class="button">Source Code</a>
-              <a href="#" class="button">Live Site</a>
+              <button class="ui-btn">
+                <span>Source Code</span>
+              </button>
+
+              <button class="ui-btn">
+                <span>Live Site</span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
@@ -804,8 +809,9 @@
           <div class="project-details">
             <h2>Passion</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. This
-              project uses JavaScript, React, and Database.
+              Passion is my AI-powered, node-based interactive chatbot designed
+              to provide seamless, intelligent communication, relaying
+              information about me in a more fun but effective way.
             </p>
             <p>
               <strong>Version:</strong>
@@ -817,8 +823,13 @@
               <span class="tag">Database</span>
             </div>
             <div class="project-buttons">
-              <a href="#" class="button">Source Code</a>
-              <a href="#" class="button">Live Site</a>
+              <button class="ui-btn">
+                <span>Source Code</span>
+              </button>
+
+              <button class="ui-btn">
+                <span>Live Site</span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
@@ -833,8 +844,11 @@
           <div class="project-details">
             <h2>CreateIT</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. This
-              project uses JavaScript, React, and Database.
+              A mobile application prototype that incorporates user's on hands
+              ingredients to consume APIs. This mobile application prototype
+              integrates with APIs to recommend meals based on available
+              ingredients, offering a practical and delicious solution to
+              everyday meal planning.
             </p>
             <p>
               <strong>Version:</strong>
@@ -846,8 +860,13 @@
               <span class="tag">Database</span>
             </div>
             <div class="project-buttons">
-              <a href="#" class="button">Source Code</a>
-              <a href="#" class="button">Live Site</a>
+              <button class="ui-btn">
+                <span>Source Code</span>
+              </button>
+
+              <button class="ui-btn">
+                <span>Live Site</span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
@@ -862,21 +881,32 @@
           <div class="project-details">
             <h2>Project Management App</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. This
-              project uses JavaScript, React, and Database.
+              This project management app uses ASP.NET Core Web APIs with Entity
+              Framework for the backend and SQL Server for data storage. The app
+              provides comprehensive task tracking and employee management
+              features, ensuring secure and efficient project workflow. It
+              supports role-based authentication and authorization, enabling
+              Administrators to manage users, Project Managers to oversee
+              projects and tasks, and Systems Analysts/Web Developers to update
+              task statuses.
             </p>
             <p>
               <strong>Version:</strong>
               Beta
             </p>
             <div class="project-tags">
-              <span class="tag">JavaScript</span>
+              <span class="tag">C#</span>
               <span class="tag">React</span>
-              <span class="tag">Database</span>
+              <span class="tag">SQL</span>
             </div>
             <div class="project-buttons">
-              <a href="#" class="button">Source Code</a>
-              <a href="#" class="button">Live Site</a>
+              <button class="ui-btn">
+                <span>Source Code</span>
+              </button>
+
+              <button class="ui-btn">
+                <span>Live Site</span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
