--- a/index.html
+++ b/index.html
@@ -780,16 +780,19 @@
             </p>
             <p>
               <strong>Version:</strong>
-              Released
+              In development
             </p>
             <div class="project-tags">
-              <span class="tag">C#</span>
-              <span class="tag">React</span>
-              <span class="tag">Database</span>
+              <span class="tag">HTML</span>
+              <span class="tag">CSS</span>
+              <span class="tag">JavaScript</span>
+              <span class="tag">Firebase</span>
+              <span class="tag">APIs</span>
+              <span class="tag">JSON</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span>Source Code</span>
+                <span>Documentation</span>
               </button>
 
               <button class="ui-btn">
@@ -815,12 +818,16 @@
             </p>
             <p>
               <strong>Version:</strong>
-              Beta
+              Released - 1.3
             </p>
             <div class="project-tags">
+              <span class="tag">APIs</span>
+              <span class="tag">CSS</span>
+              <span class="tag">GPT 4 mini</span>
               <span class="tag">JavaScript</span>
-              <span class="tag">React</span>
-              <span class="tag">Database</span>
+              <span class="tag">Remote-Database</span>
+              <span class="tag">Webhooks</span>
+              <span class="tag">Whatsapp</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
@@ -845,19 +852,18 @@
             <h2>CreateIT</h2>
             <p>
               A mobile application prototype that incorporates user's on hands
-              ingredients to consume APIs. This mobile application prototype
-              integrates with APIs to recommend meals based on available
-              ingredients, offering a practical and delicious solution to
-              everyday meal planning.
+              ingredients to consume APIs. CreateIT recommendS meals based on
+              available ingredients, offering a practical and delicious solution
+              to everyday meal planning.
             </p>
             <p>
               <strong>Version:</strong>
-              Beta
+              Prototype
             </p>
             <div class="project-tags">
-              <span class="tag">JavaScript</span>
-              <span class="tag">React</span>
-              <span class="tag">Database</span>
+              <span class="tag">C#</span>
+              <span class="tag">Local-Database</span>
+              <span class="tag">CSV</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
@@ -892,12 +898,12 @@
             </p>
             <p>
               <strong>Version:</strong>
-              Beta
+              Released - 1.
             </p>
             <div class="project-tags">
               <span class="tag">C#</span>
               <span class="tag">React</span>
-              <span class="tag">SQL</span>
+              <span class="tag">SQL Database</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
