Changed some things...

--- a/index.html
+++ b/index.html
@@ -104,25 +104,23 @@
                     <img src="Images/Icons/ai.svg" alt="The AI chatbot icon" />
                   </td>
                   <td class="description-cell">
-                    <span>
-                      You can interact with me by clicking the conversation icon
-                      at the bottom right corner. I operate in three modes:
-                      <ul style="list-style: none">
-                        <li>
-                          <strong>Story Mode:</strong>
-                          A guided flow with predefined questions and choices.
-                        </li>
-                        <li>
-                          <strong>Sandbox Mode:</strong>
-                          An open-ended Q&A experience.
-                        </li>
-                        <li>
-                          <strong>Action Mode:</strong>
-                          Special functionalities that go beyond the
-                          conversation flow.
-                        </li>
-                      </ul>
-                    </span>
+                    You can interact with me by clicking the conversation icon
+                    at the bottom right corner. I operate in three modes:
+                    <ul style="list-style: none">
+                      <li>
+                        <strong>Story Mode:</strong>
+                        A guided flow with predefined questions and choices.
+                      </li>
+                      <li>
+                        <strong>Sandbox Mode:</strong>
+                        An open-ended Q&A experience.
+                      </li>
+                      <li>
+                        <strong>Action Mode:</strong>
+                        Special functionalities that go beyond the conversation
+                        flow.
+                      </li>
+                    </ul>
                   </td>
                 </tr>
                 <tr>
@@ -747,19 +745,21 @@
           <div class="project-details">
             <h2>The Atlas Six</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. This
-              project uses C#, React, and Database.
+              A special project with +10k lines of code that will be released
+              soon. Whispers of destiny echo through forgotten lands, where
+              every choice carves a new path. In a journey where loyalty is
+              tested, who will stand with you when the truth is revealed?
             </p>
             <p>
               <strong>Version:</strong>
               In development
             </p>
             <div class="project-tags">
-              <span class="tag">HTML</span>
-              <span class="tag">CSS</span>
-              <span class="tag">JavaScript</span>
-              <span class="tag">Firebase</span>
               <span class="tag">APIs</span>
+              <span class="tag">CSS</span>
+              <span class="tag">Firebase</span>
+              <span class="tag">HTML</span>
+              <span class="tag">JavaScript</span>
               <span class="tag">JSON</span>
             </div>
             <div class="project-buttons">
@@ -836,8 +836,8 @@
             </p>
             <div class="project-tags">
               <span class="tag">C#</span>
-              <span class="tag">Local-Database</span>
               <span class="tag">CSV</span>
+              <span class="tag">Local-Database</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
