--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                       <strong>Privacy Notice:</strong>
                       All data processed on this website, including chatbot
                       conversations, is protected under our
-                      <span onclick="openToS()" class="textBtn">
+                      <span onclick="showToS()" class="textBtn">
                         Terms of Service
                       </span>
                       . Conversation data is kept confidential and will not be
@@ -529,10 +529,6 @@
       <section class="AboutMe" id="AboutSection">
         <div class="row">
           <div class="AboutC1">
-            <!-- <img
-              src="Images/Me.webp"
-              alt="This is my webiste profile picture"
-              id="Tino" /> -->
             <div class="profile-box">
               <div class="profile-elements bg"></div>
               <div class="profile-elements imgBx">
