Added some files and changes
1. Music + Index + Style changes

--- a/index.html
+++ b/index.html
@@ -569,14 +569,14 @@
               </button>
 
               <button
-                class="actionBtn ui-btn Viewpoint Activepoint"
+                class="actionBtn ui-btn Viewpoint"
                 id="Education"
                 onclick="show('School')">
                 <span>Education</span>
               </button>
 
               <button
-                class="actionBtn ui-btn Viewpoint Activepoint"
+                class="actionBtn ui-btn Viewpoint"
                 id="Experience"
                 onclick="show('Work')">
                 <span>Experience</span>
@@ -871,6 +871,7 @@
               Released - 1.
             </p>
             <div class="project-tags">
+              <span class="tag">ASP.NET</span>
               <span class="tag">C#</span>
               <span class="tag">React</span>
               <span class="tag">SQL Database</span>
